--- a/hi.html
+++ b/hi.html
@@ -22,11 +22,10 @@
         <div class="info">
             <h1>ABOUT <span>ME</span></h1>
             <p>I AM 16</p>
-            <a href="about.html" class="btn">OTHER HTML PAGE</a>
+            <a href="mailto: kavyakapadia007@gmail.com" class="btn">Email me</a>
         </div>
         <div class="img-box">
             <img src="pattern.png" class="back-img"style="max-width:70%;height:auto;">
-            <img src="real.png" class="main-img"style="max-width:60%;height:auto;">
         </div>
 
         <div class="social-links">
